--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Newcar">
-        <activity android:name=".MemberActivity"></activity>
+        <activity android:name=".ContactActivity"></activity>
+        <activity android:name=".MemberActivity" />
         <activity android:name=".AddnameActivity" />
         <activity android:name=".AddCarcareActivity" />
         <activity android:name=".carcare" />
