--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Newcar">
-        <activity android:name=".ContactActivity"></activity>
+        <activity android:name=".ReportActivity"></activity>
+        <activity android:name=".MenuattributeActivity" />
+
+        <service android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".MyFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".ContactActivity" />
         <activity android:name=".MemberActivity" />
         <activity android:name=".AddnameActivity" />
         <activity android:name=".AddCarcareActivity" />
