--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.koushikdutta.ion:ion:3.+'
     implementation 'com.google.android.material:material:1.+'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    implementation 'com.github.douglasjunior:android-simple-tooltip:0.2.+'
 }
